# contract-consumer

./: .prospector.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-main-branch.yml  semantic-release-main-branch.yml
docs/: explanation.md  how-to-guides.md  tutorials.md
src/: helloworld.py
src/contract_consumer/: __main__.py
src/contract_consumer/consumer/: consumer.py
tests/consumer/: test_consumer.py  test_consumer_contract.py
tests/helloworld/: test_helloworld.py
