[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"


[project]
name = "contract-consumer"
version = "0.0.0"
authors = [
    { name = "Aravind Pai", email = "dragondive@outlook.in" },
]
description = "Consumer for the Contract Testing Preparation and Demo"
dependencies = [
    "pytest",
    "requests",
    "pact-python",

    "black",
    "portray",
    "prospector[with_everything]",
    "python-semantic-release",
]
# dynamic = [
#     "version",
# ]


[tool.pytest]
mock_use_standalone_module = true


[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branches.main.match = "main"

# [tool.semantic_release.remote]
# token = { env = "GH_TOKEN" }