[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"


[project]
name = "contract_consumer"
authors = [
    { name = "Aravind Pai", email = "dragondive@outlook.in" },
]
description = "Consumer for the Contract Testing Preparation and Demo"
dependencies = [
    "pytest",
    "requests",
    "pact-python",

    "black",
    "portray",
    "prospector[with_everything]",
    "python-semantic-release",
]
dynamic = [
    "version",
]


[tool.pytest]
mock_use_standalone_module = true
ini_options.pythonpath = [
    "src/contract_consumer",
]


[tool.semantic_release]
version = "0.3.0"
version_toml = [
    "pyproject.toml:tool.semantic_release.version",
]
branches.main.match = "main"


[tool.semantic_release.remote]
token = { env = "GH_TOKEN" }


[tool.portray]
modules = [
    "contract_consumer",
]
